--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 	],
 	"require": {
 		"php": "^8.0",
+		"baraja-core/ecommerce-standard": "^0.0",
 		"baraja-core/doctrine": "^3.2",
 		"baraja-core/currency-exchange-rate": "^2.0",
 		"baraja-core/localization": "^2.0"
