--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"baraja-core/ecommerce-standard": "^0.0",
 		"baraja-core/doctrine": "^3.2",
 		"baraja-core/currency-exchange-rate": "^2.0",
-		"baraja-core/localization": "^2.0"
+		"baraja-core/localization": "^2.0",
+		"baraja-core/plugin-system": "^2.3"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^1.0",
