--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 		"php": "^8.0",
 		"baraja-core/ecommerce-standard": "^0.0",
 		"baraja-core/doctrine": "^3.2",
+		"baraja-core/shop-price": "^1.1",
 		"baraja-core/currency-exchange-rate": "^2.0",
 		"baraja-core/localization": "^2.0",
 		"baraja-core/plugin-system": "^2.3"
